# RedactIQ

./: .gitignore  GEMINI.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  clear_db.py  database.py  main.py  models.py  pyproject.toml  test_main.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/engines/: analyzer.py  ocr.py
backend/tests/: test_engines.py
docs/adr/: 001-local-first-architecture.md  002-frontend-overlay-rendering.md
frontend/: .dockerignore  Dockerfile
frontend/src/app/: page.tsx
